--- a/main.css
+++ b/main.css
@@ -186,7 +186,8 @@ li a:hover {
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    align-content: space-between;
+    align-items: center;
+
 }
 
 
@@ -195,7 +196,7 @@ li a:hover {
     transition: 0.3s;
     max-width: 40%;
     padding: 5%;
-    text-align: center;
+
 
 }
 
@@ -204,6 +205,19 @@ li a:hover {
     height: auto;
 
 }
+
+
+/*button styling*/
+div button {
+    position: absolute;
+    right: 5%;
+    bottom: 0;
+    background: transparent;
+    display: block;
+}
+
+
+
 
 @media screen and (max-width: 600px) {
     .column {
