--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ li a:hover {
 }
 
 .pimg1 {
-    background-image: url("image1.jpg");
+    background-image: url("../images/image1.jpg");
     min-height: 100%;
 
 }
@@ -89,14 +89,14 @@ li a:hover {
 
 
 .pimg2 {
-    background-image: url("image2.jpg");
+    background-image: url("../images/image2.jpg");
     min-height: 400px;
 }
 
 
 
 .pimg3 {
-    background-image: url("image3.jpg");
+    background-image: url("../images/image3.jpg");
     min-height: 400px;
 }
 
