--- a/css/main.css
+++ b/css/main.css
@@ -261,6 +261,15 @@ textarea {
 /*media queries*/
 @media screen and (max-width: 600px) {
     .column {
-        width: 100%;
+        max-width: 100%;
     }
+
+    .card {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s;
+        max-width: 100%;
+    }
+
+
+
 }
