--- a/css/main.css
+++ b/css/main.css
@@ -277,6 +277,21 @@ textarea {
         max-width: 100%;
     }
 
+    .ptext {
+        position: absolute;
+        top: 50%;
+        width: 100%;
+        text-align: center;
+        font-size: 18px;
+        letter-spacing: 4px;
+        text-transform: uppercase;
+    }
+
+    .section {
+        text-align: center;
+        padding: 20px 20px;
+    }
+
 
 
 }
