--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,7 @@ ul {
 
 
 
+
 }
 
 li {
@@ -55,6 +56,7 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-size: x-large;
 }
 
 /* Change the link color to #111 (black) on hover */
